# project-airflow

./: Dockerfile  LICENSE  README.md  airflow_settings.yaml  first_steps.py  main.py  pyproject.toml
.astro/: config.yaml
dags/: exampledag.py  stockdag.py
