[tool.poetry]
name = "project-airflow"
version = "0.1.0"
description = ""
authors = ["Ezequiel Schneider <ezequielschneiderr@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.8"
ruff = "^0.9.1"
pre-commit = "^4.0.1"
apache-airflow = "^2.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
